--- a/ProductProgamming04042025/wwwroot/registration.html
+++ b/ProductProgamming04042025/wwwroot/registration.html
@@ -11,7 +11,7 @@
     <main>
         <section id="content">
             <div id="logo">
-                <h1>ServiceName</h1>
+                <h1>FitAI</h1>
             </div>
             <form id="form" action="">
                 <div class="split-fields">
