--- a/ProductProgamming04042025/wwwroot/plan.html
+++ b/ProductProgamming04042025/wwwroot/plan.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./fonts/fontface.css">
-    <link rel="stylesheet" href="./css/shell.css">
-    <link rel="stylesheet" href="./css/plan.css">
+    <link rel="stylesheet" href="~/fonts/fontface.css">
+    <link rel="stylesheet" href="~/css/shell.css">
+    <link rel="stylesheet" href="~/css/plan.css">
     <title>МАКЕТ</title>
 </head>
 
@@ -16,7 +16,7 @@
             <div id="mobile-shell" class="mobile">
                 <div class="content">
                     <div class="hide-shell">
-                        <img src="./images/burger.svg" alt="">
+                        <img src="~/images/burger.svg" alt="">
                     </div>
                     <span class="title">
                         Чат
@@ -28,14 +28,14 @@
                     <div class="user-card">
                         <div class="content">
                             <div class="image">
-                                <img src="./images/avatar.svg" alt="">
+                                <img src="~/images/avatar.svg" alt="">
                             </div>
                             <div class="user-info">
                                 <span class="status">Пользователь</span>
                                 <span class="name">Игорь Шадров</span>
                             </div>
-                            <div class="config"><a href="./config" class="gear">
-                                    <img src="./images/gear.svg" alt="C">
+                            <div class="config"><a href="~/config" class="gear">
+                                    <img src="~/images/gear.svg" alt="C">
                                 </a></div>
                         </div>
                     </div>
@@ -44,7 +44,7 @@
                     <a href="/dashboard.html" class="nav-item">
                         <div class="content">
                             <div class="icon">
-                                <img src="./images/calendar.svg" alt="">
+                                <img src="~/images/calendar.svg" alt="">
                             </div>
                             <span class="title">
                                 Чат
@@ -54,7 +54,7 @@
                     <a href="/dashboard.html" class="nav-item selected">
                         <div class="content">
                             <div class="icon">
-                                <img src="./images/dumbbells.svg" alt="">
+                                <img src="~/images/dumbbells.svg" alt="">
                             </div>
                             <span class="title">
                                 План тренеровок
@@ -63,7 +63,7 @@
                     </a>
                 </div>
                 <button class="hide-shell">
-                    <img src="./images/arrow.svg" alt="">
+                    <img src="~/images/arrow.svg" alt="">
                 </button>
             </div>
         </nav>
@@ -718,7 +718,7 @@
         </section>
     </main>
 
-    <script src="./js/shell.js"></script>
+    <script src="~/js/shell.js"></script>
 </body>
 
 </html>
