--- a/ProductProgamming04042025/wwwroot/page copy.html
+++ b/ProductProgamming04042025/wwwroot/page copy.html
@@ -75,18 +75,19 @@
                 <div class="subtext">Упражнение</div>
                 <div id="page">
                     <div class="video">
-                        
-      <iframe
-      width="720"
-      height="405"
-      src="https://rutube.ru/play/embed/21effff128c9683bfa7de43d6d8bfe7d"
-      frameBorder="0"
-      allow="clipboard-write; autoplay"
-      webkitAllowFullScreen
-      mozallowfullscreen
-      allowFullScreen
-    ></iframe>
-  
+
+                        <iframe
+                        width="720"
+                        height="405"
+                        src="https://rutube.ru/play/embed/db4c03f42ca032b647ef18dae7b05823"
+                        frameBorder="0"
+                        allow="clipboard-write; autoplay"
+                        webkitAllowFullScreen
+                        mozallowfullscreen
+                        allowFullScreen
+                      ></iframe>
+                    
+
                     </div>
                     <div class="data">
                         <div class="item">
@@ -94,7 +95,8 @@
                                 Краткая информация
                             </div>
                             <div class="body">
-                                Жим штанги лежа на горизонтальной скамье - базовое упражнение для развития мышц груди, трицепсов и передних дельт. Является одним из главных упражнений в пауэрлифтинге и бодибилдинге.
+                                Жим штанги на наклонной скамье (30-45°) акцентирует нагрузку на верхнюю часть грудных
+                                мышц. Также задействует передние дельты и трицепсы.
                             </div>
                         </div>
                         <div class="item">
@@ -102,7 +104,8 @@
                                 Инвентарь
                             </div>
                             <div class="body">
-                                Требуется горизонтальная скамья для жима и штанга с блинами. Для безопасности рекомендуется использовать стойки с ограничителями или выполнять упражнение с партнером. Возможны варианты с разным хватом.
+                                Наклонная скамья (рекомендуемый угол 30-45°), штанга с блинами. Желательно наличие
+                                страхующего партнера.
                             </div>
                         </div>
                         <div class="item">
@@ -110,13 +113,12 @@
                                 Как выполнять
                             </div>
                             <div class="body">
-                                1. Лягте на скамью так, чтобы гриф находился на уровне глаз<br>
-                                2. Возьмитесь за гриф прямым хватом (шире плеч)<br>
-                                3. Снимите штангу со стоек и зафиксируйте на вытянутых руках<br>
-                                4. На вдохе медленно опустите штангу до касания груди<br>
-                                5. На выдохе мощно выжмите штангу вверх<br>
-                                6. В верхней точке не разгибайте локти полностью<br><br>
-                                Важные моменты: лопатки сведены, поясница прижата к скамье (но сохраняет естественный прогиб), ноги устойчиво стоят на полу.
+                                1. Установите скамью под углом 30-45°<br>
+                                2. Возьмите штангу хватом шире плеч<br>
+                                3. На вдохе опустите штангу к верхней части груди<br>
+                                4. На выдохе выжмите штангу вверх<br>
+                                5. В верхней точке не разгибайте локти полностью<br>
+                                Следите, чтобы таз оставался прижатым к скамье.
                             </div>
                         </div>
                     </div>
